# orchestrator-optical

./: .bumpversion.cfg  .gitignore  NOTICE  README.md  pyproject.toml
garr/migrations/versions/schema/: 2025-10-23_e3d84c9722c1_add_task_upgrade_g30.py
garr/products/services/: optical_device.py  optical_digital_service.py
garr/products/shared/types/: coordinates.py  ip_address.py
garr/schedules/: __init__.py  resume_waiting.py
garr/services/: netbox.py
garr/services/asyncsshcli/: __init__.py  client.py
garr/services/infinera/flexils/: client.py  deprecated_client.py  exceptions.py
garr/services/infinera/flexils/commands/: eqpt.py  maintenance_state.py  oel.py  oteintf.py  otelink.py  ots.py  sch.py  toponode.py
garr/services/infinera/g42/: data.py  data_models.py  operations.py
garr/services/infinera/tnms/: __init__.py  client.py  endpoints.py  exceptions.py
garr/translations/: en-GB.json
garr/utils/custom_types/: coordinates.py  frequencies.py  ip_address.py
garr/workflows/: __init__.py
garr/workflows/optical_device/: validate_optical_device.py
garr/workflows/optical_digital_service/: create_optical_digital_service.py  modify_optical_digital_service.py  validate_optical_digital_service.py
garr/workflows/optical_fiber/: modify_optical_fiber.py  terminate_optical_fiber.py
garr/workflows/optical_spectrum/: modify_optical_spectrum.py  terminate_optical_spectrum.py  validate_optical_spectrum.py
garr/workflows/partner/: terminate_partner.py
garr/workflows/pop/: create_pop.py
garr/workflows/tasks/: bulk_create_optical_devices.py  bulk_create_optical_fibers.py  bulk_validate_optical_fibers.py  execute_tl1_commands_on_flexils.py  import_fibers_from_tnms.py  purge_subscription_from_database.py  task_check_tnms_connection.py
orchestrator_extra_optical/: __init__.py  main.py  settings.py
orchestrator_extra_optical/migrations/: __init__.py  alembic.ini  env.py  helpers.py
orchestrator_extra_optical/migrations/versions/schema/: 2024-11-28_33f1d689a836_add_optical_fiber.py  2024-11-28_8c643e73b9a1_add_optical_spectrum.py  2024-11-28_a5c6e2ea6d8d_add_pop.py  2024-11-28_b0ecb1a9b6d0_add_optical_device.py  2024-11-28_fbe5d51ef585_add_optical_digital_service.py  2024-12-03_d946c20663d3_add_task_tnms_check.py  2024-12-06_2b2650c11dfb_add_partner.py  2025-01-27_57fbb3cbadfb_add_task_netbox_bootstrap.py  2025-01-28_ba0d8bb080ab_add_task_import_pops.py  2025-03-03_e3f5c5fafc53_add_task_bulk_create_optical_devices.py  2025-03-04_bf5bf2d46943_add_tasks_for_importing_fibers.py  2025-05-14_5e527c2f8e75_add_task_delete_hung_subscription.py  2025-07-08_f001ccbe103c_add_task_bulk_validate_optical_fiber.py  2025-07-11_545f384cbb85_add_task_create_delete_optical_cross_connections.py  2025-07-16_43ec72c4b513_add_task_tl1_commands_delete_task_optical_cross_connections.py  2025-10-23_e3d84c9722c1_add_task_upgrade_g30.py  2025-12-03_d0cd928e361f_add_task_upgrade_g42_from_600_to_802.py
orchestrator_extra_optical/products/: __init__.py
orchestrator_extra_optical/products/product_blocks/: optical_dark_spectrum.py  optical_device.py  optical_device_port.py  optical_digital_service.py  optical_fiber.py  optical_pipe.py  optical_port.py  optical_spectrum.py  optical_spectrum_path_constraints.py  optical_spectrum_section.py  optical_transport_channel.py  partner.py  pop.py  transport_channel.py
orchestrator_extra_optical/products/product_types/: __init__.py  optical_dark_spectrum.py  optical_device.py  optical_digital_service.py  optical_fiber.py  optical_pipe.py  optical_spectrum.py  partner.py  pop.py
orchestrator_extra_optical/products/services/: optical_dark_spectrum.py  optical_device.py  optical_device_port.py  optical_digital_service.py  optical_port.py  optical_spectrum.py
orchestrator_extra_optical/products/shared/: __init__.py
orchestrator_extra_optical/services/: __init__.py
orchestrator_extra_optical/services/infinera/: __init__.py
orchestrator_extra_optical/services/infinera/flexils/: __init__.py  client.py
orchestrator_extra_optical/services/infinera/flexils/commands/: __init__.py  base.py  ocrs.py  osnc.py  scg.py
orchestrator_extra_optical/services/infinera/flexils/utils/: __init__.py  correlation_tag_generator.py  fixed_params.py  tl1_command_help_to_pydantic_generator.py
orchestrator_extra_optical/services/infinera/g30/: client.py  data.py  data_models.py  operations.py
orchestrator_extra_optical/services/infinera/g42/: client.py  data.py
orchestrator_extra_optical/services/infinera/tnms/: client.py
orchestrator_extra_optical/translations/: en-GB.json
orchestrator_extra_optical/utils/: attributedispatch.py  dictdiff.py  singledispatch.py
orchestrator_extra_optical/utils/custom_types/: __init__.py  fqdn.py
orchestrator_extra_optical/workflows/: __init__.py  shared.py
orchestrator_extra_optical/workflows/optical_device/: create_optical_device.py  modify_optical_device.py  shared.py  terminate_optical_device.py
orchestrator_extra_optical/workflows/optical_digital_service/: create_optical_digital_service.py  shared.py  terminate_optical_digital_service.py
orchestrator_extra_optical/workflows/optical_fiber/: create_optical_fiber.py  shared.py  validate_optical_fiber.py
orchestrator_extra_optical/workflows/optical_spectrum/: create_optical_spectrum.py  shared.py
orchestrator_extra_optical/workflows/partner/: create_partner.py  modify_partner.py  shared.py  validate_partner.py
orchestrator_extra_optical/workflows/pop/: modify_pop.py  terminate_pop.py  validate_pop.py
orchestrator_extra_optical/workflows/tasks/: bulk_create_optical_devices.py  check_netbox_connection.py  import_pops_from_netbox.py  shared.py  upgrade_g30_from_452_to_480.py  upgrade_g42_from_600_to_802.py
